--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section id="contact" class="fade-in delay-3">
     <h2>Contact</h2>
     <p>📧 <a href="mailto:nicollasvieira1005@gmail.com">nicollasvieira1005@gmail.com</a></p>
-    <p>💼 <a href="https://www.linkedin.com/in/nicollasvieira" target="_blank">linkedin.com/in/nicollasvieira</a></p>
+    <p>💼 <a href="https://www.linkedin.com/in/nicollasvieiraalves" target="_blank">linkedin.com/in/nicollasvieiraalves</a></p>
     <p>🐙 <a href="https://github.com/SeuUsuario" target="_blank">github.com/SeuUsuario</a></p>
   </section>
 
