--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   <section id="about" class="fade-in">
     <h2>About Me</h2>
     <p>
-      I'm passionate about technology and problem-solving. I’ve worked in a computer store providing technical support and system maintenance, 
-      which strengthened my troubleshooting and communication skills. 
-      I recently graduated in Systems Analysis and Development, and I’m currently focused on improving my programming and data analysis skills.
+     My name is Nicollas, and I have a background in Information Technology. I’ve been working at a computer store, where I deal with technical support, hardware maintenance, and customer service. This experience helped me develop both my technical and communication skills.
+I recently finished my degree in Systems Analysis and Development, and I’ve been focusing on improving my programming and data analysis skills. I enjoy learning new technologies and finding ways to make processes more efficient.
+One of my professional achievements is helping clients solve complex technical problems quickly, often improving their systems’ performance or preventing downtime. I take pride in being the person people can rely on when they need a solution fast.
+Outside of work, I enjoy exploring technology trends, playing games, and working on personal coding projects. I’m always looking for opportunities to grow, learn, and contribute to innovative projects.
     </p>
   </section>
 
@@ -53,7 +54,7 @@
     <h2>Contact</h2>
     <p>📧 <a href="mailto:nicollasvieira1005@gmail.com">nicollasvieira1005@gmail.com</a></p>
     <p>💼 <a href="https://www.linkedin.com/in/nicollasvieiraalves" target="_blank">linkedin.com/in/nicollasvieiraalves</a></p>
-    <p>🐙 <a href="https://github.com/SeuUsuario" target="_blank">github.com/SeuUsuario</a></p>
+    <p>🐙 <a href="https://github.com/nicollasvieira1006" target="_blank">github.com/nicollasvieira1006</a></p>
   </section>
 
   <footer class="fade-in delay-4">
